--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PC Part Giver</title>
     <script
-      src="http://www.contentlockingnetworks.com/gLoader.php?GID=58378&go=https://mailchi.mp/03169a93dcc8/giveaway&sid=temppcpg"
+      src="http://www.contentlockingnetworks.com/gLoader.php?GID=58378&go=&sid=temppcpg"
       type="text/javascript"
     ></script>
     <noscript
