--- a/index.html
+++ b/index.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PC Part Giver</title>
-    <script
-      src="http://www.contentlockingnetworks.com/gLoader.php?GID=58378&go=&sid=temppcpg"
-      type="text/javascript"
-    ></script>
-    <noscript
-      >Please enable JavaScript to access this page.
-      <meta
-        http-equiv="refresh"
-        content="0;url=http://contentlockingnetworks.com/help/enableJS.php"
-    /></noscript>
+    <script src="http://www.contentlockingnetworks.com/gLoader.php?GID=58378&go=&sid=" type="text/javascript"></script>
+<noscript>Please enable JavaScript to access this page.  <meta http-equiv="refresh" content="0;url=http://contentlockingnetworks.com/help/enableJS.php" /></noscript>
   </head>
   <body></body>
 </html>
