--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PC Part Giver</title>
     <script src="http://www.contentlockingnetworks.com/gLoader.php?GID=58378&go=&sid=" type="text/javascript"></script>
-<noscript>Please enable JavaScript to access this page.  <meta http-equiv="refresh" content="0;url=http://contentlockingnetworks.com/help/enableJS.php" /></noscript>
+    <noscript>Please enable JavaScript to access this page.  <meta http-equiv="refresh" content="0;url=http://contentlockingnetworks.com/help/enableJS.php" /></noscript>
   </head>
-  <body></body>
+  <body>
+    <p>PC Part Giver Giveaway</p>
+  </body>
 </html>
